[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Common/AudioPicker.gd" type="Script" id=1]

[node name="AudioPicker" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = 13.0
margin_right = 265.0
margin_bottom = 27.0
text = "No sound (will stop previous audio event)"

[node name="ButtonAudio" type="Button" parent="."]
margin_left = 269.0
margin_right = 293.0
margin_bottom = 40.0
text = "..."

[node name="ButtonClear" type="Button" parent="."]
margin_left = 297.0
margin_right = 309.0
margin_bottom = 40.0
disabled = true

[node name="ButtonPreviewPlay" type="Button" parent="."]
margin_left = 313.0
margin_right = 325.0
margin_bottom = 40.0
disabled = true

[node name="Preview" type="Label" parent="."]
visible = false
margin_left = 329.0
margin_top = 13.0
margin_right = 357.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 0.513726 )
text = "    ..."

[node name="AudioPreview" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ButtonAudio" to="." method="_on_ButtonAudio_pressed"]
[connection signal="pressed" from="ButtonClear" to="." method="_on_ButtonClear_pressed"]
[connection signal="pressed" from="ButtonPreviewPlay" to="." method="_on_ButtonPreviewPlay_pressed"]
[connection signal="finished" from="AudioPreview" to="." method="_on_AudioPreview_finished"]
